--- a/index.html
+++ b/index.html
@@ -246,7 +246,11 @@ margin: 0;
 
 <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
 
-<a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
+<a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a><p>
+  
+<a href="http://www.w3.org/html/logo/">
+<img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-device-graphics-multimedia-performance-semantics.png" width="293" height="64" alt="HTML5 Powered with CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, and Semantics" title="HTML5 Powered with CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, and Semantics">
+</a>
 
 <br>
 
