--- a/about.html
+++ b/about.html
@@ -429,7 +429,7 @@ to {
   
 <center>
 <div id="SkillBox">
-        <center><p>My Skill Rank</p></center>
+        <center><p></p></center>
         
   <div class="SkillBar">
     <div id="Skill-Photoshop"> 
