--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ margin: 0;
 
 <li class="ft-hide-medium ft-hide-large ft-opennav ft-right">
 
-<a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+<a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="menu icon"></i></a>
 
 </li>
 
@@ -124,7 +124,7 @@ margin: 0;
 
 <div class="ft-display-container ft-animate-opacity">
 
-<img src="fjtarud.github.io/td_background.jpg" alt="Panoramic" style="width:100%;min-height:250px;max-height:1500px">
+<img src="fjtarud.github.io/td_background.jpg" alt="Panoramic" style="top:40px;width:100%;min-height:250px;max-height:1500px">
 
 <div class="ft-container ft-display-bottomleft ft-margin-top"></div>
 
