--- a/index.html
+++ b/index.html
@@ -80,7 +80,17 @@ margin: 0;
 
 <li class="ft-hide-medium ft-hide-large ft-opennav ft-right">
 
-<a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="menu icon"></i></a>
+<a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><div class="contain3r" onclick="myFunction(this)">
+  <div class="b4r1"></div>
+  <div class="b4r2"></div>
+  <div class="b4r3"></div>
+</div>
+
+<script>
+function myFunction(x) {
+    x.classList.toggle("change");
+}
+</script></a>
 
 </li>
 
