--- a/work.html
+++ b/work.html
@@ -1,5 +1,37 @@
 <!doctype html><html><title>Tarud Design - Work</title> <link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="/ft.css"><link rel="stylesheet" href="/ft_black.css"><link rel="stylesheet" href="ft_fonts.css"><link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> <style> h1 { font-family: 'Roboto', sans-serif; } body { margin: 0; } header, footer { color: white; background-color: black; } footer { font-size: 10px; text-align: center; margin: 0; } </style> <body>
-<!-- Navbar --><div class="ft-top"> <ul class="ft-navbar ft-theme-d2 ft-left-align"> <li class="ft-hide-medium ft-hide-large ft-opennav ft-right"> <a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a> </li> <li><a href="/index.html" class="ft-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li> <li class="ft-hide-small"><a href="/about.html" class="ft-hover-white">About</a></li> <li class="ft-hide-small"><a href="/work.html" class="ft-hover-white">Work</a></li> <li class="ft-hide-small"><a href="/services.html" class="ft-hover-white">Services</a></li> <li class="ft-hide-small"><a href="/contact.html" class="ft-hover-white">Contact</a></li> </ul>
+<!-- Navbar -->
+
+<div class="ft-top">
+
+<ul class="ft-navbar ft-theme-d2 ft-left-align">
+
+<li class="ft-hide-medium ft-hide-large ft-opennav ft-right">
+
+<a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><div class="contain3r" onclick="myFunction(this)">
+  <div class="b4r1"></div>
+  <div class="b4r2"></div>
+  <div class="b4r3"></div>
+</div>
+
+<script>
+function myFunction(x) {
+    x.classList.toggle("change");
+}
+</script></a>
+
+</li>
+
+<li><a href="/index.html" class="ft-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
+
+<li class="ft-hide-small"><a href="/about.html" class="ft-hover-white">About</a></li>
+
+<li class="ft-hide-small"><a href="/work.html" class="ft-hover-white">Work</a></li>
+
+<li class="ft-hide-small"><a href="/services.html" class="ft-hover-white">Services</a></li>
+
+<li class="ft-hide-small"><a href="/contact.html" class="ft-hover-white">Contact</a></li>
+
+</ul>
 <!-- Navbar on small screens --> <div id="navDemo" class="ft-hide ft-hide-large ft-hide-medium"> <ul class="ft-navbar ft-left-align ft-theme"> <li><a href="/about.html">About</a></li> <li><a href="/work.html">Work</a></li> <li><a href="/services.html">Services</a></li> <li><a href="/contact.html">Contact</a></li> </ul> </div></div>
 <!-- Work Row --><div class="ft-container ft-padding-64 ft-center" id="work"><h2>Work</h2><p>Since begining studies at the Art Institute at Miami International University of Art and Design, Francisco has evolved as a designer in his many skills and abilities to become a greater creative.<hr><div class="ft-third"><div class="ft-card-2 ft-white"> <img src="/New_Times_Cover.jpg" alt="New Times Magazine Cover" style="width:100%"> <div class="ft-container ft-center"> <h3>New Times Cover</h3> <h4>Digital Illustration</h4> </div> </div></div>
 <div class="ft-third"><div class="ft-card-2 ft-white"> <img src="/Porsche_Magazine_Cover.jpg" alt="Porsche Insider Magazine Cover" style="width:100%"> <div class="ft-container ft-center"> <h3>Porsche Insider Cover</h3> <h4>Introduction to Layout</h4> </div> </div></div>
